# nlp-training-cases

./: README.md  pyproject.toml  requirements.txt
data/: haiku_data_2.txt
session 1/: 01_datasets.ipynb  02_tokenizers.ipynb  03_embeddings.ipynb  04_torch_word2vec.ipynb
session 1/utils/: gptj.py  helper.py  test.py
session 2/: 05_visualizing_attention.ipynb  06_attention_from_scratch.ipynb  case_study_haiku_gpt.ipynb
session 2/Case Study Solution/: solution_case_study_classification.ipynb
utils/: gpt.py  helper.py  word2vec.py
